feat(locations): add Google Maps links
